--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.79.0",
     "@types/next-auth": "^3.13.0",
@@ -31,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "sanity": "^3.79.0",
     "styled-components": "^6.1.15",
